<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".istekGonderActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/oyunumuzuNasılBuldun"
        android:textColor="@color/text_yellow"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextİstekGirisi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextİstekGirisi"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/ratingBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/buttonIstekGonder"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextİstekGirisi"
        app:layout_constraintStart_toStartOf="@+id/editTextTextİstekGirisi"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextİstekGirisi" />

    <Button
        android:id="@+id/buttonIstekGonder"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:text="@string/istekGonder"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/text_yellow"
        app:layout_constraintBottom_toTopOf="@+id/textViewIstekIptal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <TextView
        android:id="@+id/textViewIstekIptal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ki_iptal"
        android:textColor="#FB0202"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonIstekGonder" />
</androidx.constraintlayout.widget.ConstraintLayout>