<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgraund_black_stars_horizantal"
    tools:context=".AyarlarActivity">


    <ImageView
        android:id="@+id/imageViewAvatarimIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        app:srcCompat="@drawable/avatar_mutlu" />

    <Switch
        android:id="@+id/swichTitresim"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/a_titresim"
        android:textColor="@color/text_yellow"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewtitresim"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAvatarimIcon" />


    <Switch
        android:id="@+id/switchSes"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/a_ses"
        android:textColor="@color/text_yellow"
        android:textSize="22sp"
        android:textStyle="bold"        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewSes"
        app:layout_constraintTop_toBottomOf="@+id/swichTitresim" />

    <TextView
        android:id="@+id/textViewOyunaDon"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:background="@color/text_yellow"
        android:gravity="center|center_vertical"
        android:text="@string/bolumSec"
        android:textColor="#FDFDFD"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/adViewbanner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:gravity="center"
        android:text="@string/a_ayarlar"
        android:textColor="#0048FF"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewAvatarimIcon"
        app:layout_constraintStart_toEndOf="@+id/imageViewAvatarimIcon"
        app:layout_constraintTop_toTopOf="@+id/imageViewAvatarimIcon"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageViewtitresim"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/swichTitresim"
        app:srcCompat="@drawable/ic_baseline_vibration_24"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/imageViewSes"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewtitresim"
        app:srcCompat="@drawable/ic_baseline_volume_up_24"
        tools:ignore="VectorDrawableCompat" />


    <Switch
        android:id="@+id/switchKaranlikMod"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/a_karanlik_mod"
        android:textColor="@color/text_yellow"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageViewKaranlikMod"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewKaranlikMod"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_invert_colors_24"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/imageViewRenkSecimi"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSes"
        app:srcCompat="@drawable/ic_baseline_color_lens_24"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/textViewRenkSeçimi"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:text="@string/a_avatar_renk_secimi"
        android:textColor="@color/text_yellow"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageViewRenkSecimi"
        app:layout_constraintTop_toBottomOf="@+id/switchSes" />

    <ImageView
        android:id="@+id/imageViewSiralama"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewOyunaDon"
        app:layout_constraintEnd_toStartOf="@+id/imageViewRozetler"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRenkSeçimi"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/ic_baseline_format_list_numbered_24"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/imageViewNameEdit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/textViewName"
        app:layout_constraintStart_toEndOf="@+id/textViewName"
        app:srcCompat="@drawable/ic_baseline_edit_24"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/textViewSiralama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/a_siralama"
        android:textColor="@color/text_yellow"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageViewSiralama"
        app:layout_constraintStart_toStartOf="@+id/imageViewSiralama"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSiralama" />

    <ImageView
        android:id="@+id/imageViewRozetler"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewSiralama"
        app:layout_constraintTop_toTopOf="@+id/imageViewSiralama"
        app:srcCompat="@drawable/ic_baseline_verified_user_24"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/textViewRozetler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/a_rozetler"
        android:textColor="@color/text_yellow"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageViewRozetler"
        app:layout_constraintStart_toStartOf="@+id/imageViewRozetler"
        app:layout_constraintTop_toBottomOf="@+id/imageViewRozetler" />

    <TextView
        android:id="@+id/textViewShowSkor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/a_skor"
        android:textColor="#FF0000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewName"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textViewLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/a_level"
        android:textColor="#FF0000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewShowSkor"
        app:layout_constraintTop_toBottomOf="@+id/textViewShowSkor" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="16dp"
        android:max="100"
        android:progress="10"
        app:layout_constraintBottom_toBottomOf="@+id/textViewLevel"
        app:layout_constraintEnd_toStartOf="@+id/imageViewRozetResimKucuk"
        app:layout_constraintStart_toEndOf="@+id/textViewLevel"
        app:layout_constraintTop_toTopOf="@+id/textViewLevel" />

    <ImageView
        android:id="@+id/imageViewRozetResimKucuk"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/progressBar2"
        app:layout_constraintEnd_toEndOf="@+id/swichTitresim"
        app:srcCompat="@drawable/kupa_night" />

    <TextView
        android:id="@+id/textViewRozetSayisi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="1"
        android:textColor="#FF0000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewRozetResimKucuk"
        app:layout_constraintStart_toEndOf="@+id/imageViewRozetResimKucuk" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewbanner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-2183039164562504/1461560173"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"></com.google.android.gms.ads.AdView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/text_yellow"
        android:backgroundTint="@color/text_yellow"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/alertDialogTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>